# analytical_databases_hackathon

./: .gitignore  README.md  pyproject.toml
.devcontainer/: .env_example  Dockerfile  devcontainer.json  docker-compose.yml  pyproject.toml
analytical_databases/: duckdb_with_deltatable.py
analytical_databases/1_explore_duckdb/: 1_duckdb_with_deltatable.py  1_duckdb_with_pandas.py  2_duckdb_with_deltatable.py  2_duckdb_with_pandas.py  3_duckdb_mix_and_match.py  4_bonus_duckspark.py  4_duckspark.py  README.md
analytical_databases/2_vector_databases/: README.md
analytical_databases/2_vector_databases/1_embeddings/: 1_embed_image_example.py  1_embed_image_example_bonus_duckdb.py  2_embed_text_example.py  README.md
analytical_databases/2_vector_databases/2_pgvector/: 1_pgvector_get_started.py  2_langchain_pgvector.py  3_bonus_gpt_3.py
analytical_databases/3_django_application/: README.md
analytical_databases/explore_duckdb/: duckdb_with_deltatable.py  duckdb_with_pandas.py
analytical_databases/vector_databases/: embeddings.py  pgvector_get_started.py
analytical_databases/vector_databases/embetter_embeddings/: embed_image_example.py  embed_text_example.py
data/: EWD_trip_report.txt  iris_dataset_part_2.csv
data/iris_dataset_part_1/: 0-64502a5e-1d8e-4f36-83ce-2c01b96a7505-0.parquet
django-app/core/: models.py  urls.py  views.py
django-app/core/templates/: base.html  index.html  matches.html
django-app/django_starter/: settings.py  urls.py
hackathon_duckdb/: duckdb_with_pandas.py
ignore_these_scripts/: create_delta.py  split_data.py
