[tool.poetry]
name = "hackathon-duckdb"
version = "0.1.0"
description = "hackathon to look at analytical databases"
authors = ["Luuk van der Velden"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.dependencies]
python = "~3.11"
duckdb = "^0.9.0"
pandas = "^2.1.1"
polars = "^0.19.7"
pyarrow = "^12.0.0"
deltalake = "^0.12.0"
scikit-learn = "^1.3.1"
embetter = {extras = ["vision", "text"], version = "^0.6.0"}
pgvector = "^0.2.3"
datasets = "^2.14.6"
pillow = "^10.1.0"
torch = {version = "^2.1.0", source = "torch_cpu"}
torchvision = {version = "^0.16.0", source = "torch_cpu"}
psycopg = "^3.1.12"
django = "^4.2.7"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
flake8 = "^6.1.0"
pycodestyle = "^2.11.0"
pydocstyle = "^6.3.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
